fixtures/fmt/ok/pipeline_multi.sans
# sans 0.1
datasource raw = csv("raw.csv")
table t = from(raw) do
	rename(a -> b)
	derive(c = b + 1)
	update!(c = c + 1)
	filter(c != 0)
	select a, b, c
	drop b
end
