fixtures/fmt/bad/bad_unbalanced_parens.sans
# sans 0.1
table t = from(raw
